--- a/components/common.css
+++ b/components/common.css
@@ -8,6 +8,8 @@ body {
 	flex-direction: column;
 	height: 100vh;
 	overflow: hidden;
+	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
 }
 .col {
 	display: flex;
