--- a/components/common.css
+++ b/components/common.css
@@ -30,3 +30,9 @@ input {
 input:focus {
 	outline: none;
 }
+.title {
+	text-transform: uppercase;
+	padding: 0.5rem;
+	background-color: #222;
+	font-size: 0.5rem;
+}
