--- a/components/common.css
+++ b/components/common.css
@@ -36,3 +36,10 @@ input:focus {
 	background-color: #222;
 	font-size: 0.5rem;
 }
+.button {
+	justify-content: center;
+}
+.button:hover {
+	cursor: pointer;
+	border: 1px solid #fff;
+}
