--- a/components/common.css
+++ b/components/common.css
@@ -11,16 +11,22 @@ body {
 	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
 }
+.wrap {
+	text-wrap: wrap;
+}
 .col {
 	display: flex;
 	flex-direction: column;
+	overflow: auto;
 }
 .row {
+	overflow: auto;
 	display: flex;
 	flex-direction: row;
 }
 .grow {
 	flex-grow: 1;
+	flex-basis: 0;
 }
 input {
 	color: #fff;
