--- a/components/common.css
+++ b/components/common.css
@@ -26,6 +26,11 @@ body {
 .ui {
 	padding: 0.5rem;
 }
+.long-text {
+	width: 200px;
+	overflow: auto;
+	text-wrap: wrap;
+}
 .grow {
 	flex-grow: 1;
 	flex-basis: 0;
