--- a/components/common.css
+++ b/components/common.css
@@ -11,16 +11,22 @@ body {
 	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
 }
+.square-text {
+	width: 16px;
+	height: 16px;
+	align-items: center;
+}
 .text-wrap {
 	text-wrap: wrap;
 }
-.col {
+.col, 
+.row {
 	display: flex;
+}
+.col {
 	flex-direction: column;
 }
 .row {
-	/* overflow: auto; */
-	display: flex;
 	flex-direction: row;
 }
 .ui {
