--- a/components/common.css
+++ b/components/common.css
@@ -28,6 +28,16 @@ body {
 .resizable {
 	min-width: min-content;
 }
+.vertical-resizer {
+	background: linear-gradient(#ffffff, #ffffff) no-repeat center/1px 100%;
+	width: 10px;
+	cursor: 'ew-resize'
+}
+.vertical-resizer:hover {
+	background: linear-gradient(#ffffff, #ffffff) no-repeat center/5px 100%;
+	width: 10px;
+	cursor: ew-resize;
+}
 .col, 
 .row {
 	display: flex;
