--- a/components/common.css
+++ b/components/common.css
@@ -1,14 +1,14 @@
 .root,
 body {
-	background-color: #000000;
-	color: #fff;
+	/* background-color: #000000; */
+	/* color: #fff; */
 	padding: 0;
 	margin: 0;
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
 	overflow: hidden;
-	font-size: 16px;
+	/* font-size: 16px; */
 	font-family: 'Roboto', sans-serif;
 }
 .expandable {
